UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/Household_Account__c.object-meta.xml
<CustomObject>
    <label>Household Account</label>
    <nameField>
        <label>Household Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Household Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>