UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/Active_Campaign_Nm__c.field-meta.xml
<CustomField>
    <fullName>Active_Campaign_Nm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Most recent campaign that this lead has been attributed to. Each lead can only be mapped to one unique campaign at a time</description>
    <inlineHelpText>Most recent campaign that this lead has been attributed to. Each lead can only be mapped to one unique campaign at a time</inlineHelpText>
    <label>Active Campaign Name</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Household Accounts</relationshipLabel>
    <relationshipName>Household_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>