UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/Active_Customer__c.field-meta.xml
<CustomField>
    <fullName>Active_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a household is actively billing or not</description>
    <inlineHelpText>Indicates whether a household is actively billing or not</inlineHelpText>
    <label>Active Customer</label>
    <type>Checkbox</type>
</CustomField>