UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/Active_in_SalesRabbit__c.field-meta.xml
<CustomField>
    <fullName>Active_in_SalesRabbit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if an account is active in SalesRabbit.</description>
    <inlineHelpText>Indicates if an account is active in SalesRabbit.</inlineHelpText>
    <label>Active in SalesRabbit</label>
    <type>Checkbox</type>
</CustomField>