UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/AddressKey__c.field-meta.xml
<CustomField>
    <fullName>AddressKey__c</fullName>
    <description>Provide the unique address key identifier for this location.</description>
    <inlineHelpText>Provide the unique address key identifier for this location.</inlineHelpText>
    <label>Address Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>