UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/AerialDrop_Ind__c.field-meta.xml
<CustomField>
    <fullName>AerialDrop_Ind__c</fullName>
    <description>Indicates whether an aerial drop (overhead cabling) is present or required at the property, impacting installation processes.</description>
    <inlineHelpText>Indicates whether an aerial drop (overhead cabling) is present or required at the property, impacting installation processes.</inlineHelpText>
    <label>Aerial Drop Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>