UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/Assigned_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Owner_Type__c</fullName>
    <description>Indicates the type of ownership based on Geopointe assignment.</description>
    <inlineHelpText>Select the ownership type based on Geopointe assignment for this account.</inlineHelpText>
    <label>Assigned Owner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EPP D2D</fullName>
            </value>
            <value>
                <fullName>Internal D2D</fullName>
            </value>
            <value>
                <fullName>Standard D2D</fullName>
            </value>
            <value>
                <fullName>Unassigned (default)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>