UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/C2F_FreeUDV_Override_Ind__c.field-meta.xml
<CustomField>
    <fullName>C2F_FreeUDV_Override_Ind__c</fullName>
    <description>Y/N indicator where &apos;Y&apos; means that the address (e.g. control#/env) is contained within the Copper to Fiber Free UDV Override pricing file provided to IT. Address (control#/env) universe is tied to static list.  Defaults to ‘N’</description>
    <inlineHelpText>Y/N indicator where &apos;Y&apos; means that the address (e.g. control#/env) is contained within the Copper to Fiber Free UDV Override pricing file provided to IT. Address (control#/env) universe is tied to static list.  Defaults to ‘N’</inlineHelpText>
    <label>Copper-to-Fiber Free UDV Eligible</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>