UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/CarrierRt__c.field-meta.xml
<CustomField>
    <fullName>CarrierRt__c</fullName>
    <description>US Postal Service code assigned to this household address to aid in mail delivery. The code is 1 letter for the carrier route type (city, rural, PO Box, or highway) and 3 digits for the carrier code.</description>
    <inlineHelpText>US Postal Service code assigned to this household address to aid in mail delivery. The code is 1 letter for the carrier route type (city, rural, PO Box, or highway) and 3 digits for the carrier code.</inlineHelpText>
    <label>USPS Carrier Route Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>