UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/CCID__c.field-meta.xml
<CustomField>
    <fullName>CCID__c</fullName>
    <inlineHelpText>Enter the HOA or Connected Community CCID here, if available. Default: null. MLR Header: HOAHOA</inlineHelpText>
    <label>MDU Community Connections Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>