UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/CityID__c.field-meta.xml
<CustomField>
    <fullName>CityID__c</fullName>
    <description>A unique identifier for the city, used for internal tracking and linking city-related data across systems.</description>
    <inlineHelpText>A unique identifier for the city, used for internal tracking and linking city-related data across systems.</inlineHelpText>
    <label>City ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>