UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/CLLI8__c.field-meta.xml
<CustomField>
    <fullName>CLLI8__c</fullName>
    <description>Represents the most accurate end office wirecenter CLLI8 as based on DPI and/or custom geospatial analysis of the address. Logic is to use DPI CLLI8 if it matches OGM, if not, use DPI lat/long and find corresponding end office CLLI8 that point falls within (leveraging BSA source end office wirecenter polygons).  Defaults to NULL  - Master_CLLI8 renames for list consistency
MLR Header: CLLI8</description>
    <inlineHelpText>Unique identifier for wire center associated with the service address</inlineHelpText>
    <label>Wirecenter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>