UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/CopperBBInd__c.field-meta.xml
<CustomField>
    <fullName>CopperBBInd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Copper Customer</label>
    <type>Checkbox</type>
</CustomField>