UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/Do_Not_Solicit__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Solicit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this account should not be solicited</inlineHelpText>
    <label>Do Not Solicit</label>
    <type>Checkbox</type>
</CustomField>