UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/DPI_CENSUISGrp__c.field-meta.xml
<CustomField>
    <fullName>DPI_CENSUISGrp__c</fullName>
    <description>Represents the census group information obtained from DPI, providing demographic and geographical insights for the address. This data can be crucial for targeted marketing efforts and demographic analysis.</description>
    <inlineHelpText>Represents the census group information obtained from DPI, providing demographic and geographical insights for the address. This data can be crucial for targeted marketing efforts and demographic analysis.</inlineHelpText>
    <label>DPI Census Grouping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>