UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/DPI_Maxspeed__c.field-meta.xml
<CustomField>
    <fullName>DPI_Maxspeed__c</fullName>
    <description>The maximum download/upload speed associated with the serviceability address, pulled from DPI by control number and environment.</description>
    <inlineHelpText>Enter the maximum serviceable download/upload speed for this address as identified in DPI.</inlineHelpText>
    <label>DPI Max Speed Capability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>