UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/DPI_PSCAN__c.field-meta.xml
<CustomField>
    <fullName>DPI_PSCAN__c</fullName>
    <description>DPI Environment Control Number</description>
    <externalId>true</externalId>
    <label>DPI Account Control Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>