UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/FiberBBInd__c.field-meta.xml
<CustomField>
    <fullName>FiberBBInd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Fiber Customer</label>
    <type>Checkbox</type>
</CustomField>