UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/FiberExp_ActualOFS_Dte__c.field-meta.xml
<CustomField>
    <fullName>FiberExp_ActualOFS_Dte__c</fullName>
    <description>This is actual date provided by engineering. Represents the actual date all work will be completed and address will be OFS. Only Active OSF in D2D BAU Lists.</description>
    <inlineHelpText>This is actual OFS date provided by engineering. Represents the actual date all work will be (or was) completed and address is considered OFS. Only Active OSF in D2D BAU Lists.</inlineHelpText>
    <label>Fiber Expansion OFS Date</label>
    <type>Date</type>
</CustomField>