UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/FiberExp_Ind__c.field-meta.xml
<CustomField>
    <fullName>FiberExp_Ind__c</fullName>
    <description>&apos;Y&apos; value indicates this address is part of the fiber expansion project.</description>
    <inlineHelpText>This box is marked if the address is included in the fiber expansion project.</inlineHelpText>
    <label>Fiber Expansion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>