UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/FiberExp_Project__c.field-meta.xml
<CustomField>
    <fullName>FiberExp_Project__c</fullName>
    <description>Frontier internal Engineering Project Number for fiber expansion.</description>
    <inlineHelpText>The internal project number associated with the fiber expansion at this address.</inlineHelpText>
    <label>Fiber Expansion Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>