UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/FTR_DisconnectDte__c.field-meta.xml
<CustomField>
    <fullName>FTR_DisconnectDte__c</fullName>
    <description>Most recent disconnect date of the address, sourced from DPI WTN Master. Date format YYYY-MM-DD. ADDRESS ONLY JOIN.</description>
    <inlineHelpText>Record the last date services were disconnected at this address.</inlineHelpText>
    <label>Last Disconnect Date</label>
    <type>Date</type>
</CustomField>