UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/Lead_Disposition_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Disposition_Status__c</fullName>
    <description>Reflects the current status of the account, including specific knock statuses.</description>
    <inlineHelpText>Reflects the current status of the account, including specific knock statuses.</inlineHelpText>
    <label>Lead Disposition Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Knock 1</fullName>
            </value>
            <value>
                <fullName>Knock 2</fullName>
            </value>
            <value>
                <fullName>Knock 3</fullName>
            </value>
            <value>
                <fullName>Closed - Won Sale</fullName>
            </value>
            <value>
                <fullName>Closed - Not Interested</fullName>
            </value>
            <value>
                <fullName>Closed - Not Serviceable</fullName>
            </value>
            <value>
                <fullName>Closed - Vacant Home</fullName>
            </value>
            <value>
                <fullName>Closed - Gated Community</fullName>
            </value>
            <value>
                <fullName>Closed - Gated Home</fullName>
            </value>
            <value>
                <fullName>Closed - Existing Customer</fullName>
            </value>
            <value>
                <fullName>Do Not Solicit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>