UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/Lead_Last_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Last_Upload_Date__c</fullName>
    <description>Record the last date and time this account was uploaded to SalesRabbit.</description>
    <inlineHelpText>Record the last date and time this account was uploaded to SalesRabbit.</inlineHelpText>
    <label>Lead Last Upload Date</label>
    <type>Date</type>
</CustomField>