UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/Lead_Modification_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Modification_Date__c</fullName>
    <description>Captures the date of the last modification impacting upload eligibility or auto-deletion.</description>
    <inlineHelpText>Captures the date of the last modification impacting upload eligibility or auto-deletion.</inlineHelpText>
    <label>Lead Modification Date</label>
    <type>Date</type>
</CustomField>