UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/Lead_Upload_Eligibility_Override_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Upload_Eligibility_Override_Date__c</fullName>
    <description>Tracks when an account becomes eligible for re-upload to SalesRabbit.</description>
    <inlineHelpText>Tracks when an account becomes eligible for re-upload to SalesRabbit.</inlineHelpText>
    <label>Lead Upload Eligibility Override Date</label>
    <type>Date</type>
</CustomField>