UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/LegacyAcctNbr__c.field-meta.xml
<CustomField>
    <fullName>LegacyAcctNbr__c</fullName>
    <description>If Customer: Acctjoinkey, an internal join key for linking to EDW Account level views.
If Prospect: The RDID, a persistent ID at the individual level that follows regardless of NCOA moves.</description>
    <inlineHelpText>If Customer: Acctjoinkey, an internal join key for linking to EDW Account level views.
If Prospect: The RDID, a persistent ID at the individual level that follows regardless of NCOA moves.</inlineHelpText>
    <label>Legacy Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>