UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/MaxCap_Speed_tier__c.field-meta.xml
<CustomField>
    <fullName>MaxCap_Speed_tier__c</fullName>
    <description>Is a custom grouping of speeds provided by the Marketing Operations team usage within their campaigns and it is based on Max Serviceable speed and assigned technology at address level using the monthly DPI Serviceability Golden Source</description>
    <inlineHelpText>The maximum capable speed tier for this address.</inlineHelpText>
    <label>Max Speed Capability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>