UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/MDU_Community_Connections_Name_MDU_Only__c.field-meta.xml
<CustomField>
    <fullName>MDU_Community_Connections_Name_MDU_Only__c</fullName>
    <inlineHelpText>Input the name of the HOA or Connected Community.</inlineHelpText>
    <label>MDU Community Connections Name(MDU Only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>