UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/MDU_Marketing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>MDU_Marketing_Agreement__c</fullName>
    <label>MDU Marketing Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>