UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/ONT_Present__c.field-meta.xml
<CustomField>
    <fullName>ONT_Present__c</fullName>
    <description>Indicates if the address is equipped with Fiber ONT.</description>
    <inlineHelpText>Is a Fiber Optical Network Terminal is present at this address.</inlineHelpText>
    <label>ONT Present</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>