UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner Account related to the household account</description>
    <inlineHelpText>Partner Account related to the household account</inlineHelpText>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Household Accounts</relationshipLabel>
    <relationshipName>Household_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>