UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/PropertyKey__c.field-meta.xml
<CustomField>
    <fullName>PropertyKey__c</fullName>
    <description>Unique identifier for the property, facilitating linkage and retrieval of property-specific data within FTR systems.</description>
    <inlineHelpText>Unique identifier for the property, facilitating linkage and retrieval of property-specific data within FTR systems.</inlineHelpText>
    <label>Property Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>