UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/Purchased_Speed_Tier__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Speed_Tier__c</fullName>
    <description>Only in customer leads: A custom grouping of customer purchased broadband speed in Mbps.</description>
    <inlineHelpText>Only in customer leads: A custom grouping of customer purchased broadband speed in Mbps.</inlineHelpText>
    <label>Broadband Speed Customer Cohort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>