UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/Restricted__c.field-meta.xml
<CustomField>
    <fullName>Restricted__c</fullName>
    <inlineHelpText>Check if the HOA/Community has restrictions due to BULK contracts</inlineHelpText>
    <label>MDU CCID Bulk Restricted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>