UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/SalesRabbit_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>SalesRabbit_Lead_ID__c</fullName>
    <description>Stores SalesRabbit&apos;s unique lead identifier.</description>
    <inlineHelpText>Stores SalesRabbit&apos;s unique lead identifier.</inlineHelpText>
    <label>SalesRabbit Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>