UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Address__c</fullName>
    <description>This is a custom address combo field</description>
    <label>Service Address</label>
    <type>Address</type>
</CustomField>