UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/Service_Address_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_Geolocation__c</fullName>
    <description>Latitude/Longitude obtained from the PSAMAS table in DPI based on Control#/Env. Defaults to NULL.</description>
    <inlineHelpText>Latitude/Longitude obtained from the PSAMAS table in DPI based on Control#/Env. Defaults to NULL.</inlineHelpText>
    <label>Service Address Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>