UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/SR_Agent_User_ID__c.field-meta.xml
<CustomField>
    <fullName>SR_Agent_User_ID__c</fullName>
    <description>Stores the user ID of the active lead owner from SalesRabbit.</description>
    <inlineHelpText>Stores the user ID of the active lead owner from SalesRabbit.</inlineHelpText>
    <label>SR Agent User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>