UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/SR_Agent_User_Name__c.field-meta.xml
<CustomField>
    <fullName>SR_Agent_User_Name__c</fullName>
    <description>Stores the first and last name of the lead owner from SalesRabbit.</description>
    <inlineHelpText>Stores the first and last name of the lead owner from SalesRabbit.</inlineHelpText>
    <label>SR Agent User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>