UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/TempD2D_Ranking__c.field-meta.xml
<CustomField>
    <fullName>TempD2D_Ranking__c</fullName>
    <description>This metric is designed for usage by D2D teams in cooperation with McKinsey. Meant to help stack rank specific leads for D2D execution within Sales Rabbit. Values will be &quot;Hot&quot;, &quot;Blitz&quot;, or NULL based on specific interactions/history.</description>
    <inlineHelpText>This metric is designed for usage by D2D teams in cooperation with McKinsey. Meant to help stack rank specific leads for D2D execution within Sales Rabbit. Values will be &quot;Hot&quot;, &quot;Blitz&quot;, or NULL based on specific interactions/history.</inlineHelpText>
    <label>Lead Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Blitz</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>