UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/fields/Vacation_Ind__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Ind__c</fullName>
    <description>Y/N indicator. Y reflects that the customer is currently on Vacation.</description>
    <inlineHelpText>Y/N indicator. Y reflects that the customer is currently on Vacation.</inlineHelpText>
    <label>Active Vacation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>