UCF-APR2.4/ftr main/force-app/main/default/objects/Household_Account__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Standard Household Account</description>
    <label>Standard</label>
</RecordType>